# sf6_rsz_parser

./: Cargo.toml  README.md
src/: fchar.rs  lib.rs  main.rs  prefab.rs  rsz.rs
src/rsz/: json_parser.rs
