[package]
name = "sf6_rsz_parser"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
indicatif = "0.17"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
include-bytes-zstd = "0.1.0"